<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/mainbackground"
    android:orientation="vertical"
    tools:context=".ui.acitivity.StartActivity">

    <ImageView
        android:layout_marginTop="30dp"
        android:src="@drawable/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textSize="25dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:onClick="clickAccount"
        style="@style/button1"
        android:layout_marginTop="30dp"
        android:text="@string/have_account"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>
    <Button
        android:onClick="clickCreateAccount"
        android:textStyle="bold"
        android:textColor="@color/mainbackground"
        android:background="@color/white"
        android:textSize="17sp"
        android:layout_marginTop="16dp"
        android:text="@string/create_account_1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>
</LinearLayout>