<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.acitivity.LoginActivity">

   <include layout="@layout/app_bar_layout" android:id="@+id/app_bar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login_your_account"
        android:textSize="30sp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="textEmailAddress"
            android:hint="@string/youremail"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:onClick="Login"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@color/mainbackground"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:padding="8dp"
        android:onClick="ResetPassword"
        android:textColor="@color/blue"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="Quên Mật Khẩu"
        android:background="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>